Fix opening button in standalone, fix loading icon in dark mode

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,6 +39,10 @@ html {
   box-sizing: border-box;
 }
 
+html, body {
+  min-height: 100vh;
+}
+
 *,
 *::before,
 *::after {
